<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/rel_header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shape_app_bar"
        android:padding="10dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/tv_action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/iv_back"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/text_toolbar"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_login"
            android:orientation="vertical"
            android:padding="17dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="+91"
    android:textSize="20sp"/>-->
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp" />

        <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile"
                android:inputType="phone"
                android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
    </LinearLayout>
            <TextView
                android:id="@+id/text_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mobile"
                android:textSize="15sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="15">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="20sp" />
             <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_password"
                android:textSize="13sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_register"
                android:text="@string/button_register"
                android:textColor="#fff"
                android:textSize="20sp"
                android:onClick="confirmInput"/>

            <LinearLayout
                android:id="@+id/ll_tc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_dream11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_dream11"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/text_tc"
                    android:textColor="#6e6ed2"
                    android:textSize="15sp" />

            </LinearLayout>



        <TextView
            android:id="@+id/text_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_or" />

        <LinearLayout
            android:id="@+id/ll_facebook_and_google"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_facebook"
                    android:text="@string/btn_facebook"
                    android:padding="10dp"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/ic_facebook_logo"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_google"
                    android:text="@string/btn_google"
                    android:padding="10dp"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/ic_google_plus"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_invite"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:id="@+id/text_invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/text_invite"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/text_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/text_code"
                android:textColor="#1a1aed"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>